--- a/htmx-alpine-components/darkMode.html
+++ b/htmx-alpine-components/darkMode.html
@@ -1,7 +1,10 @@
-<div class="absolute bottom-0 mb-8 p-2">
+<div class="flex items-end">
   <template x-if="mode === 'light'">
-    <button @click="toggleTheme()" x-show="mode==='light'" class="items-center">
-      <span hx-onload></span>
+    <button
+      @click="toggleTheme()"
+      x-show="mode==='light'"
+      title="Light mode toggle"
+      class="flex h-full w-full items-center justify-center font-light">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="36"
@@ -12,7 +15,7 @@
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
-        class="feather feather-sun text-white transition duration-300 hover:text-vred-300 active:scale-90">
+        class="feather feather-sun hover:text-vla dark:text-vds text-white transition duration-300 active:scale-90 dark:hover:text-vred-300">
         <circle cx="12" cy="12" r="5"></circle>
         <line x1="12" y1="1" x2="12" y2="3"></line>
         <line x1="12" y1="21" x2="12" y2="23"></line>
@@ -27,7 +30,7 @@
   </template>
 
   <template x-if="mode === 'dark'">
-    <button @click="toggleTheme()" class="items-center">
+    <button @click="toggleTheme()" title="Dark mode toggle" class="flex h-full w-full items-center justify-center">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="36"
@@ -38,7 +41,7 @@
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
-        class="feather feather-moon text-white transition duration-300 hover:text-vred-300 active:scale-90">
+        class="feather feather-moon hover:text-vla dark:text-vds text-white transition duration-300 active:scale-90 dark:hover:text-vred-300">
         <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
       </svg>
     </button>
