--- a/htmx-alpine-components/darkMode.html
+++ b/htmx-alpine-components/darkMode.html
@@ -15,7 +15,7 @@
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
-        class="feather feather-sun hover:text-vla dark:text-vds text-white transition duration-300 active:scale-90 dark:hover:text-vred-300">
+        class="feather feather-sun text-white transition duration-300 hover:text-vla active:scale-90 dark:text-vds dark:hover:text-vred-300">
         <circle cx="12" cy="12" r="5"></circle>
         <line x1="12" y1="1" x2="12" y2="3"></line>
         <line x1="12" y1="21" x2="12" y2="23"></line>
@@ -41,7 +41,7 @@
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
-        class="feather feather-moon hover:text-vla dark:text-vds text-white transition duration-300 active:scale-90 dark:hover:text-vred-300">
+        class="feather feather-moon text-white transition duration-300 hover:text-vla active:scale-90 dark:text-vds dark:hover:text-vred-300">
         <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
       </svg>
     </button>
