--- a/htmx-alpine-components/toast.html
+++ b/htmx-alpine-components/toast.html
@@ -344,7 +344,7 @@
         class="absolute w-full select-none duration-300 ease-out sm:max-w-xs"
         :class="{ 'toast-no-description': !toast.description }">
         <span
-          class="bg-vlp group relative flex w-full flex-col items-start border border-gray-100 shadow-[0_5px_15px_-3px_rgb(0_0_0_/_0.08)] transition-all duration-300 ease-out dark:border-neutral-300 dark:bg-zinc-900 sm:max-w-xs sm:rounded-md"
+          class="group relative flex w-full flex-col items-start border border-gray-100 bg-vlp shadow-[0_5px_15px_-3px_rgb(0_0_0_/_0.08)] transition-all duration-300 ease-out dark:border-neutral-300 dark:bg-zinc-900 sm:max-w-xs sm:rounded-md"
           :class="{ 'p-4' : !toast.html, 'p-0' : toast.html }">
           <template x-if="!toast.html">
             <div class="relative">
@@ -399,12 +399,12 @@
                     d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM11.9996 7C12.5519 7 12.9996 7.44772 12.9996 8V12C12.9996 12.5523 12.5519 13 11.9996 13C11.4474 13 10.9996 12.5523 10.9996 12V8C10.9996 7.44772 11.4474 7 11.9996 7ZM12.001 14.99C11.4488 14.9892 11.0004 15.4363 10.9997 15.9886L10.9996 15.9986C10.9989 16.5509 11.446 16.9992 11.9982 17C12.5505 17.0008 12.9989 16.5537 12.9996 16.0014L12.9996 15.9914C13.0004 15.4391 12.5533 14.9908 12.001 14.99Z"
                     fill="currentColor"></path>
                 </svg>
-                <p class="text-vls dark:text-vds text-[13px] font-medium leading-none" x-text="toast.message"></p>
+                <p class="text-[13px] font-medium leading-none text-vls dark:text-vds" x-text="toast.message"></p>
               </div>
               <p
                 x-show="toast.description"
                 :class="{ 'pl-5' : toast.type!='default' }"
-                class="text-vls dark:text-vds mt-1.5 text-xs leading-none opacity-70"
+                class="mt-1.5 text-xs leading-none text-vls opacity-70 dark:text-vds"
                 x-text="toast.description"></p>
             </div>
           </template>
@@ -413,7 +413,7 @@
           </template>
           <span
             @click="burnToast(toast.id)"
-            class="hover:bg-vlp-400 text-vls hover:text-vla dark:hover:text-vla dark:text-vds absolute right-0 mr-2.5 cursor-pointer rounded-full p-1 opacity-0 duration-100 ease-in-out dark:hover:bg-neutral-500"
+            class="hover:bg-vlp-400 absolute right-0 mr-2.5 cursor-pointer rounded-full p-1 text-vls opacity-0 duration-100 ease-in-out hover:text-vla dark:text-vds dark:hover:bg-neutral-500 dark:hover:text-vla"
             :class="{ 'top-1/2 -translate-y-1/2' : !toast.description && !toast.html, 'top-0 mt-2.5' : (toast.description || toast.html), 'opacity-100' : toastHovered, 'opacity-0' : !toastHovered }">
             <svg class="h-3 w-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path
